--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -35,7 +35,7 @@
         <a routerLink="/user/{{webDeveloperId}}/website/{{website._id}}/page">{{website.name}}</a>
       </li>
     </ul>
-</div>>
+</div>
   <!--<div class="col-xs-8 borders">-->
   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 borders">
     <form>
